tests/baselines/reference/parserMemberAccessorDeclaration12.errors.txt
tests/cases/conformance/parser/ecmascript5/MemberAccessorDeclarations/parserMemberAccessorDeclaration12.ts(2,8): error TS1054: A 'get' accessor cannot have parameters.
tests/cases/conformance/parser/ecmascript5/MemberAccessorDeclarations/parserMemberAccessorDeclaration12.ts(2,8): error TS2378: A 'get' accessor must return a value.


==== tests/cases/conformance/parser/ecmascript5/MemberAccessorDeclarations/parserMemberAccessorDeclaration12.ts (2 errors) ====
    class C {
       get Foo(a: number) { }
           ~~~
!!! error TS1054: A 'get' accessor cannot have parameters.
           ~~~
!!! error TS2378: A 'get' accessor must return a value.
    }